add backgrounds to the cards

--- a/index.html
+++ b/index.html
@@ -16,31 +16,32 @@
   <main class="container-fluid bg-light">
     <div>
       <div class="row">
-        <div class="col-lg-6 intro-bg">1</div>
+        <div class="col-lg-6 intro-bg"></div>
         <div class="col-lg-6">
           <div class="d-flex justify-content-between">
-            <div class="w-50 h-half bg-white border-bottom">
+            <div class="w-50 h-half bg-dark-blue text-white">
               <p class="text-green p-4">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                 Facere illum laudantium error explicabo debitis minima, 
                 excepturi aspernatur hic velit maxime ad adipisci quibusdam 
                 expedita reprehenderit tenetur molestias magnam natus. Voluptatem.
               </p>
-              <a href="#" class="btn btn-info ml-4 shadow">Donate</a>
+              <a href="#" class="btn btn-info ml-4 shadow mb-5">Donate</a>
             </div>
-            <div class="w-50 text-center twitter-bg h-half text-white">
+            <div class="w-50 text-center bg-light-blue h-half text-white">
               <i class="fab fa-5x fa-twitter my-5 pt-5"></i>
             </div>
           </div>
           <div class="d-flex justify-content-between">
-            <div class="w-50 h-half bg-green">
-              <p class="text-white p-4">
+            <div class="w-50 h-half bg-light-green text-white">
+              <p class="pt-5 px-4">helping today</p>
+              <h2 class="font-weight-bold px-4">Some heading</h2>
+              <p class="px-4 pt-3 pb-3">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                 Facere illum laudantium error explicabo debitis minima, 
-                excepturi aspernatur hic velit maxime ad adipisci quibusdam 
-                expedita reprehenderit tenetur molestias magnam natus. Voluptatem.
+                excepturi aspernatur hic velit maxime.
               </p>
-              <a href="#" class="btn btn-info ml-4 shadow">Donate</a>
+              <a href="#" class="btn btn-info ml-4 shadow mb-5">Donate</a>
             </div>
             <div class="w-50 intro2-bg h-half"></div>
           </div>
@@ -52,14 +53,14 @@
       <div class="row">
         <div class="col-lg-3 d-flex flex-column">
           <div class="boy-bg h-half"></div>
-          <div class="h-half bg-info">
+          <div class="h-half bg-red">
             <p class="text-white p-4">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
               Facere illum laudantium error explicabo debitis minima, 
               excepturi aspernatur hic velit maxime ad adipisci quibusdam 
               expedita reprehenderit tenetur molestias magnam natus. Voluptatem.
             </p>
-            <a href="#" class="btn btn-info ml-4 shadow">Donate</a>
+            <a href="#" class="btn btn-info ml-4 shadow mb-5">Donate</a>
           </div>
         </div>
         <div class="col-lg-6 intro3-bg">
@@ -73,14 +74,8 @@
           </div>
         </div>
         <div class="col-lg-3 d-flex flex-column">
-          <div class="h-half bg-info">
-            <p class="text-white p-4">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-              Facere illum laudantium error explicabo debitis minima, 
-              excepturi aspernatur hic velit maxime ad adipisci quibusdam 
-              expedita reprehenderit tenetur molestias magnam natus. Voluptatem.
-            </p>
-            <a href="#" class="btn btn-info ml-4 shadow">Donate</a>
+          <div class="h-half bg-red text-white text-center">
+            <h1 class="font-weight-bold">#Civilsociety</h1>
           </div>
           <div class="boy-bg h-half"></div>
         </div>
@@ -90,32 +85,74 @@
     <div>
       <div class="row">
         <div class="col-lg-6 d-flex justify-content-between">
-          <div>1</div>
-          <div>2</div>
+          <div class="d-flex justify-content-between">
+            <div class="w-50 h-half bg-dark-blue text-white">
+              <p class="mt-5 px-4">Helping Today</p>
+              <h2 class="font-weight-bold px-4 mt-3">Be humble</h2>
+              <p class="text-green px-4 py-3">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Facere illum laudantium error explicabo debitis minima, 
+              </p>
+              <a href="#" class="btn btn-info ml-4 shadow mb-5">Donate</a>
+            </div>
+            <div class="w-50 text-center">
+            </div>
+          </div>
         </div>
         <div class="col-lg-6 d-flex justify-content-between">
-          <div>1</div>
-          <div>2</div>
+          <div class="d-flex justify-content-between">
+            <div class="w-50 h-half">
+            </div>
+            <div class="w-50 text-center bg-dark-blue text-white">
+              <i class="fab fa-5x fa-facebook-f my-5 pt-5"></i>
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
     <div>
       <div class="row">
-        <div class="col-lg-6">1</div>
-        <div class="col-lg-6">2</div>
+        <div class="col-lg-6"></div>
+        <div class="col-lg-6 intro3-bg bg-red text-white">
+          <div class="p-5 m-5">
+            <p class="pt-5 pl-5">helping now</p>
+            <h1 class="font-weight-bold px-5">Be the one who leads. Start the big change now.</h1>
+            <p class="px-5 py-4">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto nostrum et error voluptates! Illo cupiditate fuga libero accusantium odit dolorum ex ab sequi! Eum dignissimos corrupti beatae, ad quia eveniet.
+            </p>
+            <a href="#" class="btn btn-info shadow ml-5">Donate</a>
+          </div>
+        </div>
       </div>
     </div>
 
     <div>
       <div class="row">
         <div class="col-lg-6 d-flex justify-content-between">
-          <div>1</div>
-          <div>2</div>
+          <div class="d-flex justify-content-between">
+            <div class="w-50 text-center bg-light-green text-white">
+              <i class="fab fa-5x fa-youtube my-5 pt-5"></i>
+            </div>
+            <div class="w-50 h-half bg-light text-muted border-bottom">
+              <p class="text-green p-4">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Facere illum laudantium error explicabo debitis minima, 
+                excepturi aspernatur hic velit maxime ad adipisci quibusdam 
+                expedita reprehenderit tenetur molestias magnam natus. Voluptatem.
+              </p>
+              <a href="#" class="btn btn-info ml-4 shadow mb-5">Donate</a>
+            </div>
+          </div>
         </div>
         <div class="col-lg-6 d-flex justify-content-between">
-          <div>1</div>
-          <div>2</div>
+          <div class="d-flex justify-content-between">
+            <div class="w-50 h-half border-bottom">
+            </div>
+            <div class="w-50 text-center bg-dark-blue h-half text-white">
+              <h1 class="font-weight-bold">#NGO</h1>
+            </div>
+          </div>
         </div>
       </div>
     </div>
