add background images

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 excepturi aspernatur hic velit maxime ad adipisci quibusdam 
                 expedita reprehenderit tenetur molestias magnam natus. Voluptatem.
               </p>
-              <a href="#" class="btn btn-info ml-4 shadow mb-5">Donate</a>
+              <a href="#" class="btn rounded-btn ml-4 mb-5 text-white">Donate</a>
             </div>
             <div class="w-50 text-center bg-light-blue h-half text-white">
               <i class="fab fa-5x fa-twitter my-5 pt-5"></i>
@@ -38,12 +38,11 @@
               <h2 class="font-weight-bold px-4">Some heading</h2>
               <p class="px-4 pt-3 pb-3">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                Facere illum laudantium error explicabo debitis minima, 
-                excepturi aspernatur hic velit maxime.
+                Facere illum laudantium error explicabo debitis minima.
               </p>
-              <a href="#" class="btn btn-info ml-4 shadow mb-5">Donate</a>
+              <a href="#" class="btn rounded-btn ml-4 mb-5 text-white">Donate</a>
             </div>
-            <div class="w-50 intro2-bg h-half"></div>
+            <div class="w-50 intro-bg2 h-half"></div>
           </div>
         </div>
       </div>
@@ -52,7 +51,7 @@
     <div>
       <div class="row">
         <div class="col-lg-3 d-flex flex-column">
-          <div class="boy-bg h-half"></div>
+          <div class="intro-bg3 h-half"></div>
           <div class="h-half bg-red">
             <p class="text-white p-4">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
@@ -60,24 +59,24 @@
               excepturi aspernatur hic velit maxime ad adipisci quibusdam 
               expedita reprehenderit tenetur molestias magnam natus. Voluptatem.
             </p>
-            <a href="#" class="btn btn-info ml-4 shadow mb-5">Donate</a>
+            <a href="#" class="btn rounded-btn ml-4 mb-5 text-white">Donate</a>
           </div>
         </div>
-        <div class="col-lg-6 intro3-bg">
+        <div class="col-lg-6 intro-bg4">
           <div class="p-5 m-5">
             <p class="pt-5 pl-5">helping now</p>
             <h1 class="font-weight-bold px-5">I grow by helping people in need</h1>
             <p class="text-muted px-5 py-4">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto nostrum et error voluptates! Illo cupiditate fuga libero accusantium odit dolorum ex ab sequi! Eum dignissimos corrupti beatae, ad quia eveniet.
             </p>
-            <a href="#" class="btn btn-info shadow ml-5">Donate</a>
+            <a href="#" class="btn rounded-btn ml-4 mb-5 text-white bg-light-green">Donate</a>
           </div>
         </div>
         <div class="col-lg-3 d-flex flex-column">
-          <div class="h-half bg-red text-white text-center">
-            <h1 class="font-weight-bold">#Civilsociety</h1>
+          <div class="h-half bg-red text-white text-center py-5">
+            <h1 class="font-weight-bold mt-5 pt-5">#Civilsociety</h1>
           </div>
-          <div class="boy-bg h-half"></div>
+          <div class="intro-bg5 h-half"></div>
         </div>
       </div>
     </div>
@@ -85,27 +84,23 @@
     <div>
       <div class="row">
         <div class="col-lg-6 d-flex justify-content-between">
-          <div class="d-flex justify-content-between">
-            <div class="w-50 h-half bg-dark-blue text-white">
+          <div class="w-50 h-half bg-dark-blue text-white">
               <p class="mt-5 px-4">Helping Today</p>
               <h2 class="font-weight-bold px-4 mt-3">Be humble</h2>
               <p class="text-green px-4 py-3">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                 Facere illum laudantium error explicabo debitis minima, 
               </p>
-              <a href="#" class="btn btn-info ml-4 shadow mb-5">Donate</a>
-            </div>
-            <div class="w-50 text-center">
-            </div>
+              <a href="#" class="btn rounded-btn ml-4 mb-5 text-white">Donate</a>
+          </div>
+          <div class="w-50 intro-bg6 h-half">
           </div>
         </div>
         <div class="col-lg-6 d-flex justify-content-between">
-          <div class="d-flex justify-content-between">
-            <div class="w-50 h-half">
-            </div>
-            <div class="w-50 text-center bg-dark-blue text-white">
-              <i class="fab fa-5x fa-facebook-f my-5 pt-5"></i>
-            </div>
+          <div class="w-50 h-half intro-bg7">
+          </div>
+          <div class="w-50 text-center bg-dark-blue text-white">
+            <i class="fab fa-5x fa-facebook-f my-5 pt-5"></i>
           </div>
         </div>
       </div>
@@ -113,7 +108,7 @@
 
     <div>
       <div class="row">
-        <div class="col-lg-6"></div>
+        <div class="col-lg-6 intro-bg8"></div>
         <div class="col-lg-6 intro3-bg bg-red text-white">
           <div class="p-5 m-5">
             <p class="pt-5 pl-5">helping now</p>
@@ -121,7 +116,7 @@
             <p class="px-5 py-4">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto nostrum et error voluptates! Illo cupiditate fuga libero accusantium odit dolorum ex ab sequi! Eum dignissimos corrupti beatae, ad quia eveniet.
             </p>
-            <a href="#" class="btn btn-info shadow ml-5">Donate</a>
+            <a href="#" class="btn rounded-btn ml-5 mb-5 text-white">Donate</a>
           </div>
         </div>
       </div>
@@ -130,28 +125,24 @@
     <div>
       <div class="row">
         <div class="col-lg-6 d-flex justify-content-between">
-          <div class="d-flex justify-content-between">
-            <div class="w-50 text-center bg-light-green text-white">
-              <i class="fab fa-5x fa-youtube my-5 pt-5"></i>
-            </div>
-            <div class="w-50 h-half bg-light text-muted border-bottom">
+          <div class="w-50 text-center bg-light-green text-white pt-5">
+            <i class="fab fa-5x fa-youtube my-5 pt-5"></i>
+          </div>
+          <div class="w-50 h-half bg-white text-muted border-right">
               <p class="text-green p-4">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                 Facere illum laudantium error explicabo debitis minima, 
                 excepturi aspernatur hic velit maxime ad adipisci quibusdam 
                 expedita reprehenderit tenetur molestias magnam natus. Voluptatem.
               </p>
-              <a href="#" class="btn btn-info ml-4 shadow mb-5">Donate</a>
-            </div>
+              <a href="#" class="btn rounded-btn ml-4 mb-5 text-white bg-red">Donate</a>
           </div>
         </div>
         <div class="col-lg-6 d-flex justify-content-between">
-          <div class="d-flex justify-content-between">
-            <div class="w-50 h-half border-bottom">
-            </div>
-            <div class="w-50 text-center bg-dark-blue h-half text-white">
-              <h1 class="font-weight-bold">#NGO</h1>
-            </div>
+          <div class="w-50 h-half intro-bg9">
+          </div>
+          <div class="w-50 text-center bg-dark-blue h-half text-white pt-5">
+            <h1 class="font-weight-bold mt-5 pt-5">#NGO</h1>
           </div>
         </div>
       </div>
