add top navigation

--- a/index.html
+++ b/index.html
@@ -9,8 +9,35 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <nav></nav>
+  <header class="bg-red py-2">
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <a class="navbar-brand logo text-white font-weight-bold" href="index.html">
+        <img src="img/logo.jpg" alt="USDC" width="100">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">Donations</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">Events</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">Blog</a>
+          </li>
+        </ul>
+        <a href="#" class="btn rounded-btn text-white my-2 my-lg-0">Donate</a>
+      </div>
+    </nav>
   </header>
 
   <main class="container-fluid bg-light">
