add footer to page

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
   <header class="bg-red py-2">
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand logo text-white font-weight-bold" href="index.html">
+      <a class="navbar-brand logo text-white ml-5" href="index.html">
         <img src="img/logo.jpg" alt="USDC" width="100">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon text-white"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
@@ -34,8 +34,17 @@
           <li class="nav-item">
             <a class="nav-link text-white" href="#">Blog</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">Our Work</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">Partners</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">Contact Us</a>
+          </li>
         </ul>
-        <a href="#" class="btn rounded-btn text-white my-2 my-lg-0">Donate</a>
+        <a href="#" class="mr-5 btn rounded-btn text-white my-2 my-lg-0">Donate</a>
       </div>
     </nav>
   </header>
@@ -176,8 +185,50 @@
     </div>
   </main>
 
-  <footer>
+  <footer class="footer-bg pt-3 text-white">
+    <div class="container-fluid py-5">
+      <div class="row">
+        <div class="col-lg-3 pl-5 ">
+          <h4 class="font-weight-bold">USDC</h4>
+          <p>Our team gathers thousands of volunteers with a mission to help others. Helping is caring.</p>
+          <div>
+            <a href="#">Instagram</a>
+            <a href="#">Facebook</a>
+            <a href="#">Twitter</a>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <h4 class="font-weight-bold">News</h4>
+          <div>
+            <a href="#">Climate friendly</a><br>
+            <small>2019-10-14</small>
+          </div>
+          <div>
+            <a href="#">Our planet can't wait</a><br>
+            <small>2019-10-14</small>
+          </div>
+          <div>
+            <a href="#">olunteers and helpers</a><br>
+            <small>2019-10-14</small>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <h4 class="font-weight-bold">Follow Us</h4>
 
+        </div>
+        <div class="col-lg-3">
+          <h4 class="font-weight-bold">Support</h4>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate, velit corporis. Necessitatibus, quam. Totam tenetur blanditiis iure voluptas.</p>
+          <a href="#" class="btn rounded-btn text-white bg-red">Donate</a>
+        </div>
+      </div>
+    </div>
+    <div class="py-3 bg-dark-blue text-center">
+      <p class="pt-3">
+          Created with love by 
+          <a href="http://cathella9.github.io">Nakitto Catherine</a>
+      </p>
+    </div>
   </footer>
   <script
       src="https://kit.fontawesome.com/7290f27402.js"
