--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link text-white" href="#">Home</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link text-white" href="#">Donations</a>
           </li>
@@ -37,9 +37,9 @@
           <li class="nav-item">
             <a class="nav-link text-white" href="#">Our Work</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link text-white" href="#">Partners</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link text-white" href="#">Contact Us</a>
           </li>
@@ -51,16 +51,15 @@
 
   <main class="container-fluid bg-light">
     <div>
-      <div class="row">
-        <div class="col-lg-6 intro-bg"></div>
-        <div class="col-lg-6">
+      <div class="row b-g">
+        <div class="col-lg-6 intro-bg h-full"></div>
+        <div class="col-lg-6 turn-to-columns">
           <div class="d-flex justify-content-between">
             <div class="w-50 h-half bg-dark-blue text-white">
-              <p class="text-green p-4">
+              <p class="text-green px-4 pt-5">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                 Facere illum laudantium error explicabo debitis minima, 
-                excepturi aspernatur hic velit maxime ad adipisci quibusdam 
-                expedita reprehenderit tenetur molestias magnam natus. Voluptatem.
+                excepturi aspernatur hic velit maxime.
               </p>
               <a href="#" class="btn rounded-btn ml-4 mb-5 text-white">Donate</a>
             </div>
@@ -70,9 +69,8 @@
           </div>
           <div class="d-flex justify-content-between">
             <div class="w-50 h-half bg-light-green text-white">
-              <p class="pt-5 px-4">helping today</p>
-              <h2 class="font-weight-bold px-4">Some heading</h2>
-              <p class="px-4 pt-3 pb-3">
+              <p class="pt-5 px-4 text-dark">helping today</p>
+              <p class="px-4 pt-2 pb-3">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                 Facere illum laudantium error explicabo debitis minima.
               </p>
@@ -89,11 +87,10 @@
         <div class="col-lg-3 d-flex flex-column">
           <div class="intro-bg3 h-half"></div>
           <div class="h-half bg-red">
-            <p class="text-white p-4">
+            <p class="text-white px-4 pt-5">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
               Facere illum laudantium error explicabo debitis minima, 
-              excepturi aspernatur hic velit maxime ad adipisci quibusdam 
-              expedita reprehenderit tenetur molestias magnam natus. Voluptatem.
+              excepturi aspernatur hic velit maxime.
             </p>
             <a href="#" class="btn rounded-btn ml-4 mb-5 text-white">Donate</a>
           </div>
@@ -105,7 +102,7 @@
             <p class="text-muted px-5 py-4">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto nostrum et error voluptates! Illo cupiditate fuga libero accusantium odit dolorum ex ab sequi! Eum dignissimos corrupti beatae, ad quia eveniet.
             </p>
-            <a href="#" class="btn rounded-btn ml-4 mb-5 text-white bg-light-green">Donate</a>
+            <a href="#" class="btn rounded-btn ml-5 mb-5 text-white bg-light-green">Donate</a>
           </div>
         </div>
         <div class="col-lg-3 d-flex flex-column">
@@ -119,33 +116,36 @@
 
     <div>
       <div class="row">
-        <div class="col-lg-6 d-flex justify-content-between">
-          <div class="w-50 h-half bg-dark-blue text-white">
+        <div class="col-lg-6 turn-to-columns">
+          <div class="d-flex justify-content-between">
+            <div class="w-50 h-half bg-dark-blue text-white">
               <p class="mt-5 px-4">Helping Today</p>
-              <h2 class="font-weight-bold px-4 mt-3">Be humble</h2>
-              <p class="text-green px-4 py-3">
+              <p class="text-green px-4 pt-2">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                 Facere illum laudantium error explicabo debitis minima, 
               </p>
               <a href="#" class="btn rounded-btn ml-4 mb-5 text-white">Donate</a>
-          </div>
-          <div class="w-50 intro-bg6 h-half">
+            </div>
+            <div class="w-50 intro-bg6 h-half">
+            </div>
           </div>
         </div>
-        <div class="col-lg-6 d-flex justify-content-between">
-          <div class="w-50 h-half intro-bg7">
-          </div>
-          <div class="w-50 text-center bg-dark-blue text-white">
-            <i class="fab fa-5x fa-facebook-f my-5 pt-5"></i>
+        <div class="col-lg-6 turn-to-columns">
+          <div class="d-flex justify-content-between">
+            <div class="w-50 h-half intro-bg7">
+            </div>
+            <div class="w-50 text-center bg-dark-blue text-white h-half">
+              <i class="fab fa-5x fa-facebook-f my-5 pt-5"></i>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
     <div>
-      <div class="row">
-        <div class="col-lg-6 intro-bg8"></div>
-        <div class="col-lg-6 intro3-bg bg-red text-white">
+      <div class="row b-g">
+        <div class="col-lg-6 intro-bg8 h-full"></div>
+        <div class="col-lg-6 h-full2 bg-red text-white intro-half">
           <div class="p-5 m-5">
             <p class="pt-5 pl-5">helping now</p>
             <h1 class="font-weight-bold px-5">Be the one who leads. Start the big change now.</h1>
@@ -160,25 +160,28 @@
 
     <div>
       <div class="row">
-        <div class="col-lg-6 d-flex justify-content-between">
-          <div class="w-50 text-center bg-light-green text-white pt-5">
-            <i class="fab fa-5x fa-youtube my-5 pt-5"></i>
-          </div>
-          <div class="w-50 h-half bg-white text-muted border-right">
-              <p class="text-green p-4">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                Facere illum laudantium error explicabo debitis minima, 
-                excepturi aspernatur hic velit maxime ad adipisci quibusdam 
-                expedita reprehenderit tenetur molestias magnam natus. Voluptatem.
-              </p>
-              <a href="#" class="btn rounded-btn ml-4 mb-5 text-white bg-red">Donate</a>
+        <div class="col-lg-6 turn-to-columns">
+          <div class="d-flex justify-content-between">
+            <div class="w-50 text-center bg-light-green h-half text-white pt-5">
+              <i class="fab fa-5x fa-youtube my-5 pt-5"></i>
+            </div>
+            <div class="w-50 h-half bg-white text-muted border-right">
+                <p class="text-green px-4 pt-5">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                  Facere illum laudantium error explicabo debitis minima, 
+                  excepturi aspernatur hic velit maxime.
+                </p>
+                <a href="#" class="btn rounded-btn ml-4 mb-5 text-white bg-red">Donate</a>
+            </div>
           </div>
         </div>
-        <div class="col-lg-6 d-flex justify-content-between">
-          <div class="w-50 h-half intro-bg9">
-          </div>
-          <div class="w-50 text-center bg-dark-blue h-half text-white pt-5">
-            <h1 class="font-weight-bold mt-5 pt-5">#NGO</h1>
+        <div class="col-lg-6 turn-to-columns">
+          <div class="d-flex justify-content-between">
+            <div class="w-50 h-half intro-bg9">
+            </div>
+            <div class="w-50 text-center bg-dark-blue h-half text-white pt-5">
+              <h1 class="font-weight-bold mt-5 pt-5">#NGO</h1>
+            </div>
           </div>
         </div>
       </div>
@@ -188,7 +191,7 @@
   <footer class="footer-bg pt-3 text-white">
     <div class="container-fluid py-5">
       <div class="row">
-        <div class="col-lg-3 pl-5 ">
+        <div class="col-md-6 col-lg-3 mb-4">
           <h4 class="font-weight-bold">USDC</h4>
           <p>Our team gathers thousands of volunteers with a mission to help others. Helping is caring.</p>
           <div>
@@ -197,7 +200,7 @@
             <a href="#">Twitter</a>
           </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-md-6 col-lg-3 mb-4">
           <h4 class="font-weight-bold">News</h4>
           <div>
             <a href="#">Climate friendly</a><br>
@@ -208,15 +211,18 @@
             <small>2019-10-14</small>
           </div>
           <div>
-            <a href="#">olunteers and helpers</a><br>
+            <a href="#">Volunteers and helpers</a><br>
             <small>2019-10-14</small>
           </div>
         </div>
-        <div class="col-lg-3">
-          <h4 class="font-weight-bold">Follow Us</h4>
-
+        <div class="col-md-6 col-lg-3 mb-4">
+          <h4 class="font-weight-bold">Contact Us</h4>
+          <p>2976 Washington St San Francisco, CA 94115 United States</p>
+          <p>+1-677-124-44227</p>
+          <p>+1-677-144-50227</p>
+          <p>haveheart@gmail.com</p>
         </div>
-        <div class="col-lg-3">
+        <div class="col-md-6 col-lg-3 mb-4">
           <h4 class="font-weight-bold">Support</h4>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate, velit corporis. Necessitatibus, quam. Totam tenetur blanditiis iure voluptas.</p>
           <a href="#" class="btn rounded-btn text-white bg-red">Donate</a>
@@ -226,10 +232,11 @@
     <div class="py-3 bg-dark-blue text-center">
       <p class="pt-3">
           Created with love by 
-          <a href="http://cathella9.github.io">Nakitto Catherine</a>
+          <a class="text-white" href="http://cathella9.github.io">Nakitto Catherine</a>
       </p>
     </div>
   </footer>
+
   <script
       src="https://kit.fontawesome.com/7290f27402.js"
       crossorigin="anonymous"
