change colors, add live link

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
         <div class="col-lg-6 intro-bg h-full"></div>
         <div class="col-lg-6 turn-to-columns">
           <div class="d-flex justify-content-between">
-            <div class="w-50 h-half bg-dark-blue text-white">
+            <div class="w-50 h-half bg-white">
               <p class="text-green px-4 pt-5">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                 Facere illum laudantium error explicabo debitis minima, 
                 excepturi aspernatur hic velit maxime.
               </p>
-              <a href="#" class="btn rounded-btn ml-4 mb-5 text-white">Donate</a>
+              <a href="#" class="btn rounded-btn ml-4 mb-5 bg-red text-white">Donate</a>
             </div>
             <div class="w-50 text-center bg-light-blue h-half text-white">
               <i class="fab fa-5x fa-twitter my-5 pt-5"></i>
@@ -118,13 +118,13 @@
       <div class="row">
         <div class="col-lg-6 turn-to-columns">
           <div class="d-flex justify-content-between">
-            <div class="w-50 h-half bg-dark-blue text-white">
+            <div class="w-50 h-half bg-white">
               <p class="mt-5 px-4">Helping Today</p>
               <p class="text-green px-4 pt-2">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                 Facere illum laudantium error explicabo debitis minima, 
               </p>
-              <a href="#" class="btn rounded-btn ml-4 mb-5 text-white">Donate</a>
+              <a href="#" class="btn rounded-btn bg-red ml-4 mb-5 text-white">Donate</a>
             </div>
             <div class="w-50 intro-bg6 h-half">
             </div>
@@ -134,7 +134,7 @@
           <div class="d-flex justify-content-between">
             <div class="w-50 h-half intro-bg7">
             </div>
-            <div class="w-50 text-center bg-dark-blue text-white h-half">
+            <div class="w-50 text-center bg-light-blue text-white h-half">
               <i class="fab fa-5x fa-facebook-f my-5 pt-5"></i>
             </div>
           </div>
@@ -162,7 +162,7 @@
       <div class="row">
         <div class="col-lg-6 turn-to-columns">
           <div class="d-flex justify-content-between">
-            <div class="w-50 text-center bg-light-green h-half text-white pt-5">
+            <div class="w-50 text-center bg-light-blue h-half text-white pt-5">
               <i class="fab fa-5x fa-youtube my-5 pt-5"></i>
             </div>
             <div class="w-50 h-half bg-white text-muted border-right">
@@ -179,7 +179,7 @@
           <div class="d-flex justify-content-between">
             <div class="w-50 h-half intro-bg9">
             </div>
-            <div class="w-50 text-center bg-dark-blue h-half text-white pt-5">
+            <div class="w-50 text-center bg-light-green h-half text-white pt-5">
               <h1 class="font-weight-bold mt-5 pt-5">#NGO</h1>
             </div>
           </div>
@@ -192,47 +192,53 @@
     <div class="container-fluid py-5">
       <div class="row">
         <div class="col-md-6 col-lg-3 mb-4">
-          <h4 class="font-weight-bold">USDC</h4>
+          <h4 class="font-weight-bold mb-4">USDC</h4>
           <p>Our team gathers thousands of volunteers with a mission to help others. Helping is caring.</p>
-          <div>
-            <a href="#">Instagram</a>
-            <a href="#">Facebook</a>
-            <a href="#">Twitter</a>
+          <div class="mt-3">
+            <a href="#" class="text-white">
+              <i class="fab fa-lg mr-3 fa-facebook-square"></i>
+            </a>
+            <a href="#" class="text-white">
+              <i class="fab fa-lg mr-3 fa-instagram"></i>
+            </a>
+            <a href="#" class="text-white">
+              <i class="fab fa-lg fa-twitter"></i>
+            </a>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 mb-4">
-          <h4 class="font-weight-bold">News</h4>
-          <div>
-            <a href="#">Climate friendly</a><br>
-            <small>2019-10-14</small>
+          <h4 class="font-weight-bold mb-4">News</h4>
+          <div class="mb-3">
+            <a href="#" class="text-white">Climate friendly</a><br>
+            <small>2021-01-14</small>
           </div>
-          <div>
-            <a href="#">Our planet can't wait</a><br>
-            <small>2019-10-14</small>
+          <div class="mb-3">
+            <a href="#" class="text-white">Our planet can't wait</a><br>
+            <small>2021-01-14</small>
           </div>
-          <div>
-            <a href="#">Volunteers and helpers</a><br>
-            <small>2019-10-14</small>
+          <div class="mb-3">
+            <a href="#" class="text-white">Volunteers and helpers</a><br>
+            <small>2021-01-14</small>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 mb-4">
-          <h4 class="font-weight-bold">Contact Us</h4>
+          <h4 class="font-weight-bold mb-4">Contact Us</h4>
           <p>2976 Washington St San Francisco, CA 94115 United States</p>
           <p>+1-677-124-44227</p>
           <p>+1-677-144-50227</p>
-          <p>haveheart@gmail.com</p>
+          <p>usdc-ug@gmail.com</p>
         </div>
         <div class="col-md-6 col-lg-3 mb-4">
-          <h4 class="font-weight-bold">Support</h4>
+          <h4 class="font-weight-bold mb-4">Support</h4>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate, velit corporis. Necessitatibus, quam. Totam tenetur blanditiis iure voluptas.</p>
-          <a href="#" class="btn rounded-btn text-white bg-red">Donate</a>
+          <a href="#" class="btn border-0 rounded-btn text-white bg-red">Donate</a>
         </div>
       </div>
     </div>
     <div class="py-3 bg-dark-blue text-center">
       <p class="pt-3">
           Created with love by 
-          <a class="text-white" href="http://cathella9.github.io">Nakitto Catherine</a>
+          <a class="text-white" href="https://cathella.github.io">Nakitto Catherine</a>
       </p>
     </div>
   </footer>
